--- a/app/views/daysheet/_admin_desktop_visit.html.erb
+++ b/app/views/daysheet/_admin_desktop_visit.html.erb
@@ -2,6 +2,7 @@
    pat = visit.patient 
    remote = device_is_desktop?
 %>
+<%=   simple_form_for [pat,visit] do |f|  %>
 
   <!--tr style='background-color: #dff0d8;' -->
   <tr class="<%= highlight %>">
@@ -26,6 +27,14 @@
            <td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(pat,visit) %></td>
         <% else %>
            <td><%= link_to visit.entry_ts.strftime("%d-%b"), patient_visit_path(pat,visit) %></td>
+        <% end %>
+
+        <% if @date.today? %>
+        <td class="text-center pt-3" >
+        <% if visit.status < ASSESSED %>
+        <%= f.input :room, collection: EXAM_ROOMS, label: false, include_blank: false, input_html: {onchange: 'this.form.submit();'} %>
+        <% end %>
+        </td>
         <% end %>
 
         <% if device_is_desktop? %>
@@ -72,4 +81,4 @@
 
 	 <td class='text-center'><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, patient_visit_path(pat,visit), method: :delete, data: { confirm: "Are you sure you want to delete visit #{visit.id} for patient #{pat.lname}?" } %> </td>
 </tr>
-<%# end %>
+<% end %>
