--- a/app/views/daysheet/_doctor_desktop_visit.html.erb
+++ b/app/views/daysheet/_doctor_desktop_visit.html.erb
@@ -3,6 +3,7 @@
    desktop = device_is_desktop?
 %>
   
+<%=   simple_form_for [pat,visit] do |f|  %>
   <tr class="<%= highlight %>">
 	<td>
 	<% if visit.ready_to_bill? %>
@@ -25,6 +26,14 @@
            <td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(pat,visit) %></td>
         <% else %>
            <td><%= link_to visit.entry_ts.strftime("%d-%b"), patient_visit_path(pat,visit) %></td>
+        <% end %>
+
+        <% if @date.today? %>
+        <td class="text-center pt-3" >
+        <% if visit.status < ASSESSED %>
+        <%= f.input :room,  collection: EXAM_ROOMS, label: false, include_blank: false, input_html: {onchange: 'this.form.submit();'} %>
+        <% end %>
+        </td>
         <% end %>
 
 	<td><%= link_to pat.full_name, pat %></td>
@@ -72,3 +81,4 @@
           <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, cancel_patient_visit_path(pat, visit) %>
           </td>
 </tr>
+<% end %>
