gem update; doctor invitation to complete registration

--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -1,1 +1,8 @@
 <%= render "#{current_user.role}_#{device_type}_index" %>
+
+<script>
+$zoho.salesiq.ready=function(embedinfo)
+{ $zoho.salesiq.floatbutton.visible("hide"); }
+</script>
+
+
