--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,6 @@
 <%= render "#{device_type}_index" %>
+
+<script>
+$zoho.salesiq.ready=function(embedinfo)
+{ $zoho.salesiq.floatbutton.visible("hide"); }
+</script>
