--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -65,3 +65,10 @@
 </div>
 </div>
 
+<script>
+$zoho.salesiq.ready=function(embedinfo)
+{ $zoho.salesiq.floatbutton.visible("hide"); }
+</script>
+
+
+
