--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -2,3 +2,8 @@
 
 <%= render "#{device_type}_index" %>
 
+<script>
+$zoho.salesiq.ready=function(embedinfo)
+{ $zoho.salesiq.floatbutton.visible("hide"); }
+</script>
+
