show Dr. name in users table

--- a/app/views/users/_desktop_index.html.erb
+++ b/app/views/users/_desktop_index.html.erb
@@ -6,7 +6,7 @@
       <tr>
           <th> <%= sortable 'email', 'Email' %></th>
           <th class='text-center'>Role</th>
-          <th  class='text-center'>Patient</th>
+          <th class='text-center'>L.Name</th>
 	  <th class='text-center'>Confirmed</th>
           <th class='text-center'><%= sortable 'created_at', 'Created' %></th>
 	  <th class='text-center'><%= sortable 'sign_in_count', 'Sign In Count' %></th>
