phone numbers on front page

--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -3,8 +3,8 @@
 <div class="row">  
   <div class="col-md-5">
     <img src='/images/clinic.jpg' width="480"></img>
-    <div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561 
-      <br>During clinic open hours: (905) 561-9255 
+    <div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (905) 561-9255 
+      <br>During off hours please call: (289) 204-0561
     </div>
 
     <p>
