--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -17,7 +17,8 @@
 <p class="pt-4"><b><i>We never send surprise bills for insured services! Free is free. </i></b> 
 <p class="pt-3">Don’t have a health card? We still can help. Please call the number below and leave a message. We will respond as soon as we can. </p>
 
-<h1> (289) 204-0561 </h1>
+<h1> (905) 561-9255 </h1>
+<h1>Off hours: (289) 204-0561 </h1>
 
   <p>
     <div class="panel panel-info pt-3 news-panel-body">
