--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -958,8 +958,9 @@ card > hr {
 // Bootstrap form controls focus border
 .form-control:focus {
   border-color: #FF0000;
-//  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
-  background-color: #E9F0FD!important;
+//  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+//  background-color: #E9F0FD!important;
+  background-color: yellow; 
 }
 
 .form-inline {
