--- a/app/views/patients/_patient_form.html.erb
+++ b/app/views/patients/_patient_form.html.erb
@@ -35,7 +35,7 @@
   </div>
 
   <div class="col-md-3" id="ohip_number">
-  <%= f.input :ohip_num, label: 'Health Card Number', hint: 'Required ' %>
+  <%= f.input :ohip_num, label: 'Health Card Number', hint: 'Required ', disabled: true %>
   </div>
 
   <div class="col-md-2" id="ohip_ver">
