--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -11,7 +11,7 @@
     <div class="ml-3 pt-3">
     <div class="panel panel-info p-3 news-panel-body">
      <div class="panel-body">
-      Clinic is now open by appointment only Mon-Sat from 9am to 2pm. You can <%= link_to "book your appointment online", new_user_session_path %>
+       Clinic is now open by appointment only Mon-Sat from 9am to 2pm. You can <%= link_to "book your appointment online", new_user_session_path %>  Please call the clinic during business hours to make an appointment : <b> (905) 561-9255 </b>
   <%= render "schedules/full_schedule" %>
     </div>
   </div>
