--- a/app/views/procedures/_form.html.erb
+++ b/app/views/procedures/_form.html.erb
@@ -35,10 +35,22 @@
   <!-- Row 3 -->
 
 <div class="row">
-  <div class="col-sm-6">
-          <%= f.input :cost, label: 'Service Fee' %>
+  <div class="col-sm-2">
+          <%= f.input :cost, label: 'Provider Fee' %>
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-2">
+          <%= f.input :spec_fee, label: 'Spec Fee' %>
+  </div>
+  <div class="col-sm-2">
+          <%= f.input :ass_fee, label: 'Assistant Fee' %>
+  </div>
+  <div class="col-sm-2">
+          <%= f.input :ana_fee, label: 'Anasthes. Fee' %>
+  </div>
+  <div class="col-sm-2">
+          <%= f.input :non_ana_fee, label: 'Non Anast. Fee' %>
+  </div>
+  <div class="col-sm-2">
           <%= f.input :eff_date, as: :date, start_year: 1900, end_year: Date.today.year+1, label: 'Effective Date', html5: true %>
   </div>
 </div>
