bug fixes; TV visit highlight; fee schedule update

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -637,6 +637,10 @@ input, select{
   float: left;
   margin-bottom: 2px;
 }
+ 
+#flash_info {
+ float: right;
+}
 
 .notice {
   background-color :#ffc107;  // overrides default colors!
