--- a/app/views/daysheet/_staff_mobile_visit.html.erb
+++ b/app/views/daysheet/_staff_mobile_visit.html.erb
@@ -1,10 +1,12 @@
-<% highlight = nil; highlight = 'table-warning' if visit.proc_code.present? && !visit.diag_code.present? && !visit.cash? 
-   pat = visit.patient 
+<% cl = nil;
+   cl = 'table-warning' if (!visit.proc_code.present? || !visit.diag_code.present?) && !visit.cash?
+   pat = visit.patient
    remote = device_is_desktop?
+   cl = 'table-success' if visit.vis_type == 'TV' && !visit.ready?
 %>
 
   <!--tr style='background-color: #dff0d8;' -->
-  <tr class="<%= highlight %>">
+  <tr class="<%= cl %>">
 	<td>
 	<% if visit.ready_to_bill? %>
 		<a title="Ready To Bill"><i class="glyphicon glyphicon-ok-sign text-primary"></i></a>
