--- a/app/views/users/_desktop_index.html.erb
+++ b/app/views/users/_desktop_index.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, 'All users') %>
 <%= render "shared/modal", size: 'sm' %>
 
+<%= @users.count %> users
 <table class="tbl2 table-hover table-striped table-bordered">
    <thead>
       <tr>
