mobile front page updated

--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -25,7 +25,7 @@
 <font size=3>
   <p><font size=6>A</font>fter long disruption to regular services at our Stoney Creek location, we are now happy to announce resumption of full 7 day schedule. Patients who need to see a doctor now can come to the clinic. </p>
 
-  <p><font size=6>I</font>f there's no need for phisical visit, you can discuss your medical issue with one of our doctors over the phone. You can also renew your prescripton over the phone and pick it up at the pharmacy of your choice. Please register below and request callback from doctor.</p>
+  <p><font size=6>I</font>f there's no need for phisical visit, you can discuss your medical issue with one of our doctors over the phone. You can also renew your prescription over the phone and pick it up at the pharmacy of your choice. Please register below and request callback from doctor.</p>
 
   <p>
   Let's first look you up. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database. If found, you will have immediate access to your patient record and visit history </p>
@@ -34,7 +34,7 @@
 
 <p> If you are registered already, you are ready to make your telephone appointment: </p>
 
-<div align="center" class="pt-4"><%= link_to 'Request Callback From Dr. Ostapenko', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center" class="pt-4"><%= link_to 'Request Callback From Doctor', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
 <p class="pt-4"><i>We never send surprise bills for insured services! Free is free. </i> </p>
 
