--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -1,9 +1,11 @@
 <% provide(:title, 'Welcome') %>
-<div class="hdr-text">Digital Walk-In Clinic for canadians <img src="/images/leaf.png" width=45> </div> 
-<div class='spacer-10'></div>
-<img src='/images/mobile_clinic.jpg' width="320" style="padding:10px"></img>
 
-  <p><font size=6>N</font>eed to see a doctor, but don't want to go to clinic during pandemic? You don't have to. You can now discuss your medical issue and renew your medications over the phone.</p>
+  <div class="hdr-text">We are now open every Day!  <img src="/images/leaf.png" width=45 valign=top> </div>
+  <div class='pt-5'></div>
+<font size=3>
+  <p><font size=6>A</font>fter long disruption to regular services at our Stoney Creek location, we are now happy to announce resumption of full 7 day schedule. Patients who need to see a doctor now can come to the clinic. </p>
+
+  <p><font size=6>I</font>f there's no need for phisical visit, you can discuss your medical issue with one of our doctors over the phone. You can also renew your prescription over the phone and pick it up at the pharmacy of your choice. Please register below and request callback from doctor.</p>
 
   <p>
   Let's first look you up. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database. If found, you will have immediate access to your patient record and visit history </p>
@@ -23,10 +25,12 @@
   <p>
     <div class="panel panel-info pt-3 news-panel-body">
      <div class="panel-body ">
-       Clinic is now open by appointment only Mon-Sat from 9am to 2pm. You can <%= link_to "book your appointment online", new_user_session_path %>
+       Clinic is now open every day. Please <%= link_to "book your appointment online", new_user_session_path %> or call the clinic  during business hours: <b> (905) 561-9255 </b>.
+       For telemedicine visits, our goal is to call you back within an hour of your online request if it was made between 8am and 8pm.
   <%= render "schedules/full_schedule" %>
     </div>
   </div>
+</font>
 
 <div class='pt-3'>
 <%= render "footer_icons" %>
