--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -1,33 +1,34 @@
 <% provide(:title, 'Welcome') %>
 
   <div class="hdr-text">We are now open every Day!  <img src="/images/leaf.png" width=45 valign=top> </div>
-  <div class='pt-5'></div>
+  <div class='pt-4'></div>
 <font size=3>
   <p><font size=6>A</font>fter long disruption to regular services at our Stoney Creek location, we are now happy to announce resumption of full 7 day schedule. Patients who need to see a doctor now can come to the clinic. </p>
 
-  <p><font size=6>I</font>f there's no need for phisical visit, you can discuss your medical issue with one of our doctors over the phone. You can also renew your prescription over the phone and pick it up at the pharmacy of your choice. Please register below and request callback from doctor.</p>
+  <p><font size=6>I</font>f there's no need for physical visit, you can discuss your medical issue with one of our doctors over the phone. You can also renew your prescription over the phone and pick it up at the pharmacy of your choice. </p>
 
   <p>
-  Let's first look you up. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database. If found, you will have immediate access to your patient record and visit history </p>
+  <font size=6>L</font>et's first look you up. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database.</p>
 
   <%= render "#{device_type}_lookup" %>
 
-<p> If you are registered already, you can make your telephone appointment by clicking a button below: </p>
+<p> If you have registered already, you are ready to make your telephone appointment. Just click the button below and describe your symptoms.  </p>
 
-<div align="center" class="pt-4"><%= link_to 'Request Callback From Dr. Ostapenko', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center" class="pt-4"><%= link_to 'Request Callback From Doctor', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
-<p class="pt-4"><b><i>We never send surprise bills for insured services! Free is free. </i></b> 
-<p class="pt-3">Don’t have a health card? We still can help. Please call the number below and leave a message. We will respond as soon as we can. </p>
+<div class="pt-5"><i class="glyphicon glyphicon-exclamation-sign mr-2"></i><b>If you have COVID-19 symptoms, please do not come to the clinic. Register online or call the numbers provided. </b></div> 
+<p class="pt-3">Don’t have a health card? We still can help. Please call the clinic directly during business hours. </p>
 
 <h1> (905) 561-9255 </h1>
 <h1>Off hours: (289) 204-0561 </h1>
 
   <p>
     <div class="panel panel-info pt-3 news-panel-body">
-     <div class="panel-body ">
-       Clinic is now open every day. Please <%= link_to "book your appointment online", new_user_session_path %> or call the clinic  during business hours: <b> (905) 561-9255 </b>.
+      <div class="panel-body "><p align="justify"> 
+       This is current schedule. Please <%= link_to "book your appointment online", new_user_session_path %> or call the clinic  during business hours: <b> (905) 561-9255 </b>.
        For telemedicine visits, our goal is to call you back within an hour of your online request if it was made between 8am and 8pm.
   <%= render "schedules/full_schedule" %>
+        </p>
     </div>
   </div>
 </font>
