--- a/app/views/daysheet/_admin_desktop_visit.html.erb
+++ b/app/views/daysheet/_admin_desktop_visit.html.erb
@@ -8,28 +8,31 @@
 <%=   simple_form_for [pat,visit] do |f|  %>
 
   <tr class="<%= cl %>">
-	<td>
-	<% if visit.ready_to_bill? %>
-		<a title="Ready To Bill"><i class="glyphicon glyphicon-ok-sign text-primary"></i></a>
-  	<% elsif visit.assessed? %>
-		<a title="Assessed"><i class="glyphicon glyphicon-ok-circle text-muted"></i></a>
+        <td class="text-center">
+        <% if visit.ready_to_bill? %>
+                <a title="Ready To Bill"><i class="glyphicon glyphicon-ok-sign text-primary"></i></a>
+        <% elsif visit.assessed? %>
+                <a title="Assessed"><i class="glyphicon glyphicon-ok-circle text-muted"></i></a>
         <% elsif visit.with_doctor? %>
-	  	<a title="With Doctor"><i class="glyphicon glyphicon-question-sign text-text-muted"></i></a>
-	<% elsif visit.billed_or_paid? %>
-	  	<a title="Billed"><i class="glyphicon glyphicon-ok-sign text-success"></i></a>
-	<% elsif visit.has_error? %>
-		<a title="Error"><i class="glyphicon glyphicon-exclamation-sign text-danger"></i></a>
-	<% elsif visit.cancelled? %>
-		<a title="Cancelled"><i class="glyphicon glyphicon-minus-sign text-warning"></i></a>
-	<% else %>
-		<a title="Arrived"><i class="glyphicon glyphicon-question-sign text-warning"></i></a>
-	<% end %>
-	</td>
-	<% if visit.date == @date %>
-           <td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(pat,visit) %></td>
+                <a title="With Doctor"><i class="glyphicon glyphicon-question-sign text-text-muted"></i></a>
+        <% elsif visit.billed_or_paid? %>
+                <a title="Billed"><i class="glyphicon glyphicon-ok-sign text-success"></i></a>
+        <% elsif visit.has_error? %>
+                <a title="Error"><i class="glyphicon glyphicon-exclamation-sign text-danger"></i></a>
+        <% elsif visit.cancelled? %>
+                <a title="Cancelled"><i class="glyphicon glyphicon-minus-sign text-warning"></i></a>
         <% else %>
-           <td><%= link_to visit.entry_ts.strftime("%d-%b"), patient_visit_path(pat,visit) %></td>
+                <a title="Arrived"><i class="glyphicon glyphicon-question-sign text-warning"></i></a>
         <% end %>
+        </td>
+        <td class="text-center"><%= visit.vis_type %></td>
+        <td class="text-center">
+        <% if visit.date == @date %>
+           <%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(pat,visit) %>
+        <% else %>
+           <%= link_to visit.entry_ts.strftime("%d-%b"), patient_visit_path(pat,visit) %>
+        <% end %>
+        </td>
 
         <% if @date.today? %>
         <td class="text-center pt-3" >
@@ -39,9 +42,7 @@
         </td>
         <% end %>
 
-        <% if device_is_desktop? %>
 	<td><%= visit.doctor.lname %></td>
-        <% end %>
 	<td><%= link_to pat.full_name, pat %></td>
 	<td class='text-center'><%= pat.pat_type %></td>
 	<td>
@@ -60,7 +61,6 @@
 	<td class="text-center"><%= visit.diag_scode %></td>
 	<td><%= visit.proc_codes %></td>
 
-	<% if device_is_desktop? %>
 	<td>
 	<% if visit.status == PAID && visit.claim_id.present? %>
 	  <%= link_to visit.status_str, claim_url(visit.claim_id) %> 		
@@ -68,7 +68,6 @@
 	  <%= visit.status_str %>
 	<% end %>
 	</td>
-	<% end %>
 	  
 	 <td class='text-center'><%= link_to '<i class="glyphicon glyphicon-credit-card"></i>'.html_safe, label_patient_path(pat), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get', onclick: "set_md_modal()"  %></td>
 	 <td class='text-center'><%= link_to '<i class="glyphicon glyphicon-file"></i>'.html_safe, visitform_patient_visit_path(pat,visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get', onclick: "set_lg_modal()"  %></td>
