--- a/app/views/daysheet/_staff_desktop_index.html.erb
+++ b/app/views/daysheet/_staff_desktop_index.html.erb
@@ -15,8 +15,9 @@
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
-	  <th class="tbl_lsm"><%= sortable 'entry_ts', ts.html_safe %></th>
-          <th class="tbl_lsm">Room</th>
+          <th class="tbl_sm text-center">Visit</th>
+	  <th class="tbl_lsm text-center"><%= sortable 'entry_ts', ts.html_safe %></th>
+          <th class="tbl_lsm text-center">Room</th>
           
           <th class="tbl_lsm">
           <% if @docs.present? && @docs.size > 1 %>
@@ -30,6 +31,8 @@
             </ul>
           </span>
           </th>
+         <% else %>
+           Doctor
          <% end %>
 
 	  <th class="tbl_lmd">Patient</th>
