--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -40,7 +40,13 @@
 
 <p> If you have registered already, go ahead and make your telephone appointment. Just click the button below and describe your symptoms.  </p>
 
-<div align="center" class="pt-4"><%= link_to 'Request Callback From Doctor', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center" class="pt-4"><%= link_to 'Book An Appointment', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+
+<div class="pt-4">
+  <i>
+    Patients who booked their appointments online for visits at the clinic will be seen by doctor <u>right away</u>. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
+  </i>
+</div>
 
 <div class="pt-5"><i class="glyphicon glyphicon-exclamation-sign mr-2"></i><b>If you have COVID-19 symptoms, please do not come to the clinic. Register online or call the numbers provided. </b></div> 
 
