--- a/app/views/static_pages/_mobile_lookup.html.erb
+++ b/app/views/static_pages/_mobile_lookup.html.erb
@@ -13,9 +13,8 @@
      <%= f.input :ohip4, label: 'Health Card#', placeholder: 'last 4 digits' %>
   </div>
 
-  <div class="col-md-3 col-xs-12">
-  <%= f.label '' %>
-  <%= f.button :submit, "Look up My Record" , class: "btn btn-primary btn-lg" %>
+  <div class="col-md-3 col-xs-12 pt-4">
+  <%= f.button :submit, "Look up My Record" , class: "btn-primary btn-lg"  %>
   </div>
 </div>
 
