--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -3,18 +3,22 @@
   <div class="hdr-text">We are now open every Day!  <img src="/images/leaf.png" width=45 valign=top> </div>
   <div class='pt-4'></div>
 <font size=3>
-  <p><font size=6>A</font>fter long disruption to regular services at our Stoney Creek location, we are now happy to announce resumption of full 7 day schedule. Patients who need to see a doctor now can come to the clinic. </p>
+  <p><font size=6>W</font>e are now happy to announce resumption of full 7 day schedule. Patients who need to see a doctor now can come to the clinic. Please register below to save time.</p>
 
   <p><font size=6>I</font>f there's no need for physical visit, you can discuss your medical issue with one of our doctors over the phone. You can also renew your prescription over the phone and pick it up at the pharmacy of your choice. </p>
 
-  <p>
-  <font size=6>L</font>et's first look you up. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database.</p>
-
   <%= render "#{device_type}_lookup" %>
 
-<p> If you have registered already, you are ready to make your telephone appointment. Just click the button below and describe your symptoms.  </p>
+<p> Already registered? Just click the button below to book an appointment.  </p>
 
-<div align="center" class="pt-4"><%= link_to 'Request Callback From Doctor', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center" class="pt-4">
+<%= link_to 'Book An Appoinment', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+
+<div class="pt-4">
+  <i>
+    Patients with online appointments for visits at the clinic will be seen by doctor <u>right away</u>. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
+  </i>
+</div>
 
 <div class="pt-5"><i class="glyphicon glyphicon-exclamation-sign mr-2"></i><b>If you have COVID-19 symptoms, please do not come to the clinic. Register online or call the numbers provided. </b></div> 
 <p class="pt-3">Don’t have a health card? We still can help. Please call the clinic directly during business hours. </p>
