--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -24,15 +24,14 @@
   <div class="hdr-text">We are now open every Day!  <img src="/images/leaf.png" width=45 valign=top> </div> 
   <div class='pt-5'></div>
 <font size=3>
-  <p><font size=6>A</font>fter long disruption to regular services at our Stoney Creek location, we are now happy to announce resumption of full 7 day schedule. Patients who need to see a doctor now can come to the clinic. </p>
+  <p><font size=6>A</font>fter long disruption to regular services at our Stoney Creek location, we are now happy to announce resumption of full 7 day schedule. Patients who need to see a doctor now can come to the clinic. Please check current schedule below. Patients who registered online are always given the priority</p>
 
-<div class="pt-3">
-  <font size=6>I</font>f there's no need for physical visit, you can discuss your medical issue with one of our doctors over the phone. You can also renew your prescription over the phone and pick it up at the pharmacy of your choice. Please register below and request callback from doctor.
-</div>
+  <div class="pt-3"></div>
 
-<div class="pt-3">
-<font size=6>L</font>et's first look you up. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database.
-</div>
+  <p><font size=6>I</font>f there's no need for physical visit, you can discuss your medical issue with one of our doctors over the phone. You can also renew your prescription over the phone and pick it up at the pharmacy of your choice. Please register below and request callback from doctor.  </p>
+
+  <div class="pt-3"></div>
+  <p> <font size=6>N</font>ot registered yet? Registration is easy, let's first look you up. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database.</p>
 
 <div class="pt-3">
   <%= render "#{device_type}_lookup" %>
@@ -49,6 +48,8 @@
 </div>
 
 <div class="pt-5"><i class="glyphicon glyphicon-exclamation-sign mr-2"></i><b>If you have COVID-19 symptoms, please do not come to the clinic. Register online or call the numbers provided. </b></div> 
+
+<div class="pt-5"> Starting July 17 all visiting patients are required to wear mask </div>
 
 </div>
 </div>
