--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -24,7 +24,7 @@
 <p class="pt-3">Don’t have a health card? We still can help. Please call the clinic directly during business hours. </p>
 
 <h1> (905) 561-9255 </h1>
-<h1>Off hours: (289) 204-0561 </h1>
+<h1>Off hours: register online</h1>
 
   <p>
     <div class="panel panel-info pt-3 news-panel-body">
