--- a/app/views/user_mailer/new_registration.html.erb
+++ b/app/views/user_mailer/new_registration.html.erb
@@ -1,4 +1,4 @@
-Dear EMR Walk-in staff member,
+Dear EMR Walk-in admin member,
 
 <p>New user "<%= @user.name %>", role: <%= @user.role %> registered online at <%= @user.created_at %> </p>
 
